--- a/localtv/templates/localtv/author_list.html
+++ b/localtv/templates/localtv/author_list.html
@@ -9,7 +9,7 @@
 
 {% block main %}
 	<header class="page-header">
-		<h1 class="page-title">Authors</h1>
+		<h1 class="page-title">Artists</h1>
 	</header>
 	<div class="padded page-content">
 		<div class="pagination upper">
