--- a/localtv/templates/localtv/_site_navigation.html
+++ b/localtv/templates/localtv/_site_navigation.html
@@ -11,6 +11,9 @@
 			<a href="{% url 'localtv_submit_video' %}">{% trans 'Submit' %}</a>
 		</li>
 	{% endif %}
+	<li class="nav-item nav-artists">
+		<a href="{% url 'localtv_author_index' %}">{% trans 'Artists' %}</a>
+	</li>	
 	{% if browse_modules %}
 		<li class="nav-item nav-item-dropdown">
 			<a href="#">{% trans "Browse" %}</a>
